fix: fix profile meta overflow on Firefox
Close #296

--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -25,7 +25,6 @@
   .profile-contact {
     display: inline;
     margin-right: 0.5rem;
-    white-space: pre;
   }
 
   a {
@@ -40,10 +39,9 @@
 .profile-compact {
   flex-direction: row;
 
-  .profile-avatar {
+  .profile-meta {
     @include media-breakpoint-down(sm) {
-      width: 100%;
-      height: 100%;
+      text-align: center;
     }
   }
 }
